--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 PORT=4004
+MONGO_URL=mongodb+srv://sachin:sachin123@cluster0.0v7bsjw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+TOKEN=SACHIN@123
